# DP

./: .clang-format  CMakeLists.txt  args.h  class.h  error.h  error_check.h  eval.c  eval.h  generic.c  generic.h  main.c  matrix.c  memory_check.sh  utilities.h  vector.c  vector.h  vector_info.c  vector_method.c  vector_method.h
before/: matrix.c
